tests/tooling/fixtures/native/execution/positive/bitwise_compound_assignment_mix.objc3
module BitwiseCompoundAssignmentMix;

fn main() -> i32 {
  let value = 29;
  value &= 15;
  value |= 2;
  value ^= 6;
  value <<= 2;
  value >>= 3;
  return value;
}
