tests/tooling/fixtures/native/execution/negative/block_comment_unterminated.objc3
module BlockCommentUnterminated;

let value = 3;

/* unterminated block comment
fn main() -> i32 {
  return value;
}
